fix: contrast on main page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -37,13 +37,13 @@ table {
 }
 
 th {
-    background-color: palevioletred;
+    background-color: #500052;
     color: rgb(255, 255, 255);
     font-weight: 700;
 }
 
 tr, td { 
-    background-color: rgb(218, 134, 162);
+    background-color: #910094;
     color: white;
 }
   
@@ -215,7 +215,7 @@ tr, td {
         display: flex;
         align-items: center;
         justify-content: left;
-        background-color: rgb(172, 119, 128);
+        background-color: #6F444A;
         margin-bottom: 1rem;
     }
 
@@ -225,12 +225,13 @@ tr, td {
         width: 8%;
         padding: 1rem 1rem;
         text-align: center;
-        background-color: rgb(172, 119, 128);
+        background-color:#6F444A;
     }
 
 
     .nav:hover {
-        background-color: rgb(132, 90, 97);
+        background-color: #433436;
+        transition: 0.5s;
     }
 
     
@@ -311,7 +312,7 @@ tr, td {
             display: flex;
             text-align: left;
             justify-content: left;
-            background-color: rgb(172, 119, 128);
+            background-color: #6F444A;
             margin-bottom: 1rem; 
         }
 
@@ -322,7 +323,7 @@ tr, td {
             width: 33%;
             padding: 0.75rem 1.5rem;
             text-align: center;
-            background-color: rgb(172, 119, 128);
+            background-color: #6F444A;
         }
 
         .subhead {
